--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,13 @@
             <version>2.6.5</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.github.galigator.openllet</groupId>
+            <artifactId>openllet-explanation</artifactId>
+            <!-- <version>2.6.6-SNAPSHOT</version> -->
+            <version>2.6.5</version>
+        </dependency>
+
     </dependencies>
 
     <build>
